--- a/s10.run.adds.html
+++ b/s10.run.adds.html
@@ -5,7 +5,7 @@
     <title>S10.run.adds</title>
 <link rel="stylesheet" type="text/css" href="webix.css">
 <script type="text/javascript" src="webix.js"></script>
-<style>  body { background: url(s10adds.png)} </style>
+<style>  body { background-image: url(s10adds.png); background-repeat: no-repeat; background-size: cover;} </style>
 <style> .tpred { color: #EC3774; background: #fff; border: .4em solid; border-color: rgb(256,256,256); margin: 0 0 0 -.4em;}</style>
 <style> .tpblue { color: #00ccff; background: #fff; border: .4em solid; border-color: rgb(256,256,256); margin: 0 0 0 -.4em;}</style>
 <style> .tpyellow { color: #e9df40; background: #fff; border: .4em solid; border-color: rgb(256,256,256); margin: 0 0 0 -.4em;}</style>
