--- a/s10.run.adds.html
+++ b/s10.run.adds.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <title>S10.run.adds</title>
+    <title>S10.run.adds</title> 
 <link rel="stylesheet" type="text/css" href="webix.css">
 <script type="text/javascript" src="webix.js"></script>
-<style>  body { background-image: url(s10adds.png); background-repeat: no-repeat; background-size: cover;} </style>
+<style>  body { background: url(s10adds.png); background-repeat: no-repeat; background-size: cover;} </style>
 <style> .tpred { color: #EC3774; background: #fff; border: .4em solid; border-color: rgb(256,256,256); margin: 0 0 0 -.4em;}</style>
 <style> .tpblue { color: #00ccff; background: #fff; border: .4em solid; border-color: rgb(256,256,256); margin: 0 0 0 -.4em;}</style>
 <style> .tpyellow { color: #e9df40; background: #fff; border: .4em solid; border-color: rgb(256,256,256); margin: 0 0 0 -.4em;}</style>
@@ -51,11 +51,28 @@ return alert("файл не содержит тренировки!");
 
 //document.getElementById('output').textContent = c.slice(0, 300) + "\n=================================================\n" + c.slice(-400);  
 
-document.getElementById('student').textContent = 'student:'  + '        ' + d[0].studentInfo.lastName;
-document.getElementById('trainer').textContent = 'trainer:'  + '        ' + d[0].trainerInfo.lastName;
+document.getElementById('student').textContent = 'student:'  + '        ' + Valid_Student();
+document.getElementById('trainer').textContent = 'trainer:'  + '        ' + Valid_Trainer();
 document.getElementById('ffile').textContent = 'file:'       + '        ' + fff;
 document.getElementById('inputfile').setAttribute("type", "hidden");
 
+function Valid_Student() {
+  try {
+    t=d[0].studentInfo.firstName + " " + d[0].studentInfo.lastName;
+    return t.trim();
+  } catch {
+    return "";
+  }
+}
+
+function Valid_Trainer() {
+  try {
+    t=d[0].trainerInfo.firstName + " " + d[0].trainerInfo.lastName;
+    return t.trim();
+  } catch {
+    return "";
+  }
+}
 
 function Valid_Comment(r,t) {
   try {
