--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ switch (d[0].studentTasksInfo.diaryTasks[r].type) {
     t = "Длительная";
     break;
   case 6:
-    t = "";
+    t = "Соревнование";
     break;
   case 7:
     t = "Силовая";
@@ -1149,3 +1149,4 @@ webix.ui(
 </body>
 
 </html>
+
